# dx-styles

./: .gitignore  Cargo.toml  README.md  build.rs  colors.toml  styles.css  styles.fbs  styles.toml  text.txt
.dx/: GROK.md  utils.rs  watcher.rs
.dx/cache/: db  snap.0000000000000162  snap.00000000000005C1  snap.000000000000077B  snap.00000000000009C5  snap.0000000000000A03  snap.00000000005931B5  snap.00000000005B73CD  snap.00000000005F0CF7  snap.000000000060D00A  snap.000000000064A75A  snap.0000000000698D1D  snap.00000000008CD9E4  snap.0000000000A532E8  snap.0000000000B186F5  snap.0000000000C40EDE  snap.0000000000D2C730  snap.0000000000D75492  snap.0000000000D8EF93  snap.0000000000D95308  snap.0000000000DAD989  snap.0000000000DFA0D5  snap.0000000000E24C5C  snap.0000000000ED2986  snap.0000000000FEC215  snap.000000000102C162  snap.0000000001968912
.dx/sled_cache/: db  snap.0000000000000264
.idx/: dev.nix
inspirations/: README.md
inspirations/website/app/: globals.css  layout.json  page.json  page.tsx
inspirations/www/: bun.lockb  next.config.ts  package.json
libs/: README.md  dx_io.rs
playgrounds/html/: index.html  styles.css
playgrounds/nextjs/: bun.lockb
src/: cache.fbs  cache.rs  data_manager.rs  dx_io.rs  engine.rs  generator.rs  io.rs  main.rs  page.tsx  parser.rs  utils.rs  watcher.rs
src/header/: README.md  mod.rs
src/website/: package.json
src/website/app/: page.tsx  (+1 more)
src/wesbite/: bun.lockb  package.json
src/www/: bun.lockb  package.json
styles/: styles1.toml  styles2.toml  styles3.toml  styles4.toml  styles5.toml
trash/: README.md
(+10 files in other folders)
